infra/k8s/apps/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      restartPolicy: Always
      containers:
        - name: expiration
          image: ghcr.io/getlarge/ticketing-expiration
          resources:
            limits:
              memory: '128Mi'
              cpu: '250m'
