infra/k8s/apps/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      restartPolicy: Always
      containers:
        - name: client
          image: ghcr.io/getlarge/ticketing-ng-client
          resources:
            limits:
              memory: '128Mi'
              cpu: '50m'
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
