infra/k8s/apps/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      restartPolicy: Always
      containers:
        - name: payments
          image: ghcr.io/getlarge/ticketing-payments
          startupProbe:
            exec:
              command: ['pgrep', '-x', 'node']
            failureThreshold: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            limits:
              memory: '128Mi'
              cpu: '150m'
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
